# AIWall

./: .dockerignore  .gitignore  README.md  aiwall.yaml.example  prices.yaml.example  pyproject.toml
.github/workflows/: ci.yml
backend/app/: __init__.py  config.py  main.py
backend/app/audit/: __init__.py  helpers.py  models.py  writer.py
backend/app/auth/: __init__.py  gateway.py
backend/app/classifiers/: __init__.py  categories.py
backend/app/policies/: __init__.py  conditions.py  context.py  engine.py  responses.py
backend/app/presets/: __init__.py
backend/app/profiles/: __init__.py  limits.py  models.py  store.py
backend/app/providers/: __init__.py  adapters.py  router.py  upstream.py
backend/app/proxy/: chat.py  (+5 more)
backend/tests/: conftest.py  test_audit.py  test_audit_helpers.py  test_audit_summary.py  test_chat_proxy.py  test_child_preset.py  test_config.py  test_daily_limits.py  test_developer_preset.py  test_dotenv.py  test_entropy.py  test_gateway_auth.py  test_health.py  test_models.py  test_models_proxy.py  test_policies.py  test_policy_proxy.py  test_pricing.py  test_pricing_proxy.py  test_privacy_responses.py  test_profile_auth.py  test_profiles.py  test_provider_router.py  test_redact.py  test_redact_proxy.py  test_role_policies.py  test_scanner_tuning.py  test_secret_corpus.py  test_secret_proxy.py  test_secret_scanner.py  test_tokens.py  test_web.py
deploy/: .env.example  Dockerfile  docker-compose.yml  docker-entrypoint.sh
deploy/examples/: aiwall.docker.yaml
docs/: architecture.md  configuration.md  secret-scanning.md
presets/: child.yaml  developer.yaml
scripts/: demo.sh  dev.sh
(+17 files in other folders)
